--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Home | My portfolio</title>
 </head>
 
@@ -17,7 +17,7 @@
         <nav class="navbar">
             <div class="container">
                 <div class="img-logo">
-                    <img class="logo" src="../assets/logo.png">
+                    <img class="logo" src="./assets/logo.png">
                 </div>
                 <div class="menu-group">
                     <ul class="nav-menu">
@@ -29,8 +29,8 @@
                         <div class="theme-switch">
                             <input type="checkbox" id="switch"/>
                             <label class="toggle-icons" for="switch">
-                                <img class="moon" src="../assets/moon.svg" alt="moon">
-                                <img class="sun" src="../assets/sun.svg" alt="sun">
+                                <img class="moon" src="./assets/moon.svg" alt="moon">
+                                <img class="sun" src="./assets/sun.svg" alt="sun">
                             </label>
                         </div>
                     </ul>
@@ -46,7 +46,7 @@
     </header>
     <section id="general-section">
         <div class="profile-image">
-            <img src="../assets/jea.png"/>
+            <img src="./assets/jea.png"/>
             <h3>Hi I'm Gefrey</h3>
         </div>
         <div class="yapping">
@@ -71,9 +71,9 @@
                         <h1 class="title-project">Task Manager (development)</h1>   
                         <span class="technologies-span">
                             Technologies used:
-                            <img src="../assets/html-icon.png" alt="html-icon" width="20"/>
-                            <img src="../assets/css-icon.png" alt="css-icon" width="20"/>
-                            <img src="../assets/js-icon.png" alt="js-icon" width="20"/>
+                            <img src="./assets/html-icon.png" alt="html-icon" width="20"/>
+                            <img src="./assets/css-icon.png" alt="css-icon" width="20"/>
+                            <img src="./assets/js-icon.png" alt="js-icon" width="20"/>
                         </span>
                         <p class="description-project">
                             This page was developed with the goal of managing tasks within independent projects, 
@@ -92,9 +92,9 @@
                         <h1 class="title-project">Pomodoro</h1>
                         <span class="technologies-span">
                             Technologies used:
-                            <img src="../assets/html-icon.png" alt="html-icon" width="20"/>
-                            <img src="../assets/css-icon.png" alt="css-icon" width="20"/>
-                            <img src="../assets/js-icon.png" alt="js-icon" width="20"/>
+                            <img src="./assets/html-icon.png" alt="html-icon" width="20"/>
+                            <img src="./assets/css-icon.png" alt="css-icon" width="20"/>
+                            <img src="./assets/js-icon.png" alt="js-icon" width="20"/>
                         </span>
                         <p class="description-project">
                             This page features a pixel art Pomodoro timer with a dynamic background that changes based on the time of day. 
@@ -110,9 +110,9 @@
                         <h1 class="title-project">Clothes Store (development)</h1>
                         <span class="technologies-span">
                             Technologies used:
-                            <img src="../assets/html-icon.png" alt="html-icon" width="20"/>
-                            <img src="../assets/css-icon.png" alt="css-icon" width="20"/>
-                            <img src="../assets/js-icon.png" alt="js-icon" width="20"/>
+                            <img src="./assets/html-icon.png" alt="html-icon" width="20"/>
+                            <img src="./assets/css-icon.png" alt="css-icon" width="20"/>
+                            <img src="./assets/js-icon.png" alt="js-icon" width="20"/>
                         </span>
                         <p class="description-project">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus mollitia beatae quia, eum officia omnis illo porro, possimus, doloremque cupiditate veniam minus atque eligendi quidem voluptate! Magnam sequi fuga quas.
@@ -134,7 +134,7 @@
             <div class="technologies">
                 <article class="technology html">
                     <div class="background-img"></div>
-                    <img class="imagen" src="../assets/html-icon.png" width="100">
+                    <img class="imagen" src="./assets/html-icon.png" width="100">
                     <div class="more-yapping">
                         <h3>HTML</h3>
                         <!-- <p>puto el que lo lea jajaja</p> -->
@@ -143,7 +143,7 @@
         
                 <article class="technology css">
                     <div class="background-img"></div>
-                    <img class="imagen" src="../assets/css-icon.png" width="100">
+                    <img class="imagen" src="./assets/css-icon.png" width="100">
                     <div class="more-yapping">
                         <h3>CSS</h3>
                         <!-- <p>lesbiana la que lo lea</p> -->
@@ -152,7 +152,7 @@
                 
                 <article class="technology js">
                     <div class="background-img"></div>
-                    <img class="imagen" src="../assets/js-icon.png" width="100"> 
+                    <img class="imagen" src="./assets/js-icon.png" width="100"> 
                     <div class="more-yapping">
                         <h3>JavaScript</h3>
                         <!-- <p>fornaifornaifornai</p> -->
@@ -161,7 +161,7 @@
 
                 <article class="technology react">
                     <div class="background-img"></div>
-                    <img class="imagen" src="../assets/react-icon.webp" width="100"> 
+                    <img class="imagen" src="./assets/react-icon.webp" width="100"> 
                     <div class="more-yapping">
                         <h3>React</h3>
                         <!-- <p>fornaifornaifornai</p> -->
@@ -177,14 +177,14 @@
             <div class="tools">
                 <article class="tool vs">
                     <div class="background-img"></div>
-                    <img class="imagen" src="../assets/vs-code-icon.png" width="100"> 
+                    <img class="imagen" src="./assets/vs-code-icon.png" width="100"> 
                     <div class="more-yapping">
                         <h3>Visual Studio Code</h3>
                     </div>
                 </article>
                 <article class="tool github">
                     <div class="background-img"></div>
-                    <img class="imagen git-invert" src="../assets/github-icon.png" width="100"> 
+                    <img class="imagen git-invert" src="./assets/github-icon.png" width="100"> 
                     <div class="more-yapping">
                         <h3>GitHub</h3>
                     </div>
@@ -197,17 +197,17 @@
         <div class="contenedor-footer">
             <p>gpuquio@gmail.com</p>
             <div class="social-icons">
-                <a href="#"><img class="social" src="../assets/facebook-icon.svg" alt="facebook"></a>
-                <a href="#"><img class="social" src="../assets/x-icon.png" alt="x"></a>
-                <a href="https://www.linkedin.com/in/gefrey-charcape-puquio/"><img class="social" src="../assets/linkedin-icon.svg" alt="linkedin"></a>
-                <a href="https://github.com/gefreyy"><img class="social" src="../assets/github-icon.svg" alt="github"></a>
+                <a href="#"><img class="social" src="./assets/facebook-icon.svg" alt="facebook"></a>
+                <a href="#"><img class="social" src="./assets/x-icon.png" alt="x"></a>
+                <a href="https://www.linkedin.com/in/gefrey-charcape-puquio/"><img class="social" src="./assets/linkedin-icon.svg" alt="linkedin"></a>
+                <a href="https://github.com/gefreyy"><img class="social" src="./assets/github-icon.svg" alt="github"></a>
             </div>
             <p>Copyright © Gefrey 2025, All rights reserved</p>
         </div>
         <!-- <div class="go-up-container"> -->
-            <button id="scrollTopBtn" class="scroll-top-btn"><img class="img-arrow-up" src="../assets/up-arrow.png" alt="up-arrow" width="24"></button>
+            <button id="scrollTopBtn" class="scroll-top-btn"><img class="img-arrow-up" src="./assets/up-arrow.png" alt="up-arrow" width="24"></button>
         <!-- </div> -->
     </footer>
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
