--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </p>
                     </article>
                 </a>
-                <a class="project" href="#" draggable="false">
+                <a class="project" href="https://clothes-ecommerce-no-bd.vercel.app/" draggable="false" target="_blank">
                     <article class="project-card-aside bottom">
                         <div class="background-image"></div>
                         <h1 class="title-project">Clothes Store (development)</h1>
@@ -110,6 +110,7 @@
                             <img src="assets/html-icon.png" alt="html-icon" width="20"/>
                             <img src="assets/css-icon.png" alt="css-icon" width="20"/>
                             <img src="assets/js-icon.png" alt="js-icon" width="20"/>
+                            <img src="assets/react-icon.webp" width="20"> 
                         </span>
                         <p class="description-project">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus mollitia beatae quia, eum officia omnis illo porro, possimus, doloremque cupiditate veniam minus atque eligendi quidem voluptate! Magnam sequi fuga quas.
@@ -135,7 +136,6 @@
                     <img class="imagen" src="assets/html-icon.png" width="100">
                     <div class="more-yapping">
                         <h3>HTML</h3>
-                        <!-- <p>puto el que lo lea jajaja</p> -->
                     </div>
                 </article>
         
@@ -144,7 +144,6 @@
                     <img class="imagen" src="assets/css-icon.png" width="100">
                     <div class="more-yapping">
                         <h3>CSS</h3>
-                        <!-- <p>lesbiana la que lo lea</p> -->
                     </div>
                 </article>
                 
@@ -153,7 +152,6 @@
                     <img class="imagen" src="assets/js-icon.png" width="100"> 
                     <div class="more-yapping">
                         <h3>JavaScript</h3>
-                        <!-- <p>fornaifornaifornai</p> -->
                     </div>
                 </article>
 
@@ -162,7 +160,30 @@
                     <img class="imagen" src="assets/react-icon.webp" width="100"> 
                     <div class="more-yapping">
                         <h3>React</h3>
-                        <!-- <p>fornaifornaifornai</p> -->
+                    </div>
+                </article>
+
+                <article class="technology mysql">
+                    <div class="background-img"></div>
+                    <img class="imagen" src="assets/mysql-icon.webp" width="100"> 
+                    <div class="more-yapping">
+                        <h3>MySQL</h3>
+                    </div>
+                </article>
+
+                <article class="technology spring">
+                    <div class="background-img"></div>
+                    <img class="imagen" src="assets/spring-fw-icon.png" width="100"> 
+                    <div class="more-yapping">
+                        <h3>Spring Boot</h3>
+                    </div>
+                </article>
+
+                <article class="technology bootstrap">
+                    <div class="background-img"></div>
+                    <img class="imagen" src="assets/bootstrap-icon.png" width="100" height="100"> 
+                    <div class="more-yapping">
+                        <h3>Bootstrap</h3>
                     </div>
                 </article>
             </div>
@@ -185,6 +206,13 @@
                     <img class="imagen git-invert" src="assets/github-icon.png" width="100"> 
                     <div class="more-yapping">
                         <h3>GitHub</h3>
+                    </div>
+                </article>
+                <article class="tool postman">
+                    <div class="background-img"></div>
+                    <img class="imagen" src="assets/postman-icon.png" width="100"> 
+                    <div class="more-yapping">
+                        <h3>Postman</h3>
                     </div>
                 </article>
             </div>
